--- a/css/index.css
+++ b/css/index.css
@@ -70,18 +70,32 @@ body {
   background-color: #212121;
 }
 
+.project2 {
+  flex-direction: start;
+}
+
 .contact-div {
   min-height: 90%;
   min-height: 90vh;
 }
 
-.home-image img,
-#projects img {
+.home-image img {
   width: 500px;
   height: 400px;
 }
 
-.row img {
+.project2 img,
+.project1 img {
+  width: 100%;
+  height: 100%;
+}
+
+/* .project1 img {
+  width: 500px;
+  height: 400px;
+} */
+
+#skills img {
   width: 100px;
   height: 100px;
 }
